bug correction, working on safari, fixed some buttons

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ html {
 
 * {
   box-sizing: border-box;
+  outline: none;
 }
 
 body {
@@ -47,7 +48,7 @@ html, body { height: 100%; }
 }
 
 .pt-page__logo {
-  position: fixed;
+  position: sticky;
   display: block;
   width: 180px;
   top: 20px;
@@ -76,29 +77,54 @@ html, body { height: 100%; }
 }
 
 input {
-  all: unset;
+  appearance: none;
+  border: none;
   display: block;
   text-align: center;
   padding: 9px 0;
   font-size: 22px;
   font-weight: bold;
+  background: none;
   border-bottom: 1px solid white;
+  color: white;
 }
 
 input::placeholder {
-  color: rgba(255, 255, 255, .2);
+  color: rgba(255, 255, 255, .5);
 }
 
 button {
-  all: unset;
+  appearance: none;
   display: block;
   width: 95%;
-  margin: 1.5rem auto .33rem auto;
+  margin: 0 auto;
   padding: 9px 0;
   text-align: center;
   text-transform: capitalize;
   border-radius: 4px;
   border: 1px solid white;
+  text-decoration: none;
+  cursor: pointer;
+  transition: background 1s, color 1s;
+}
+
+button:hover {
+  background: white;
+  color: var(--yellow-bg);
+}
+
+.content__enter {
+  appearance: none;
+  display: block;
+  width: 95%;
+  margin: 1rem auto;
+  padding: 9px 0;
+  text-align: center;
+  text-transform: capitalize;
+  border-radius: 4px;
+  border: 1px solid white;
+  background: var(--yellow-bg);
+  color: white;
   text-decoration: none;
   cursor: pointer;
 }
@@ -115,9 +141,7 @@ button {
 }
 
 .content__save {
-  all: unset;
-  background: white;
-  color: var(--yellow-bg);
+  appearance: none;
   display: block;
   width: 95%;
   margin: 1.5rem auto .33rem auto;
@@ -128,6 +152,13 @@ button {
   border: 1px solid white;
   text-decoration: none;
   cursor: pointer;
+  transition: background 1s, color 1s;
+  color: white;
+}
+
+.content__save:hover {
+  background: white;
+  color: var(--yellow-bg);
 }
 
 .pt-page-current,
@@ -175,8 +206,11 @@ button {
 }
 
 .nav__menu {
+  appearance: none;
+  border: none;
   width: 100%;
   height: 100%;
+  background: none;
 }
 
 .nav__menu__image {
@@ -184,7 +218,7 @@ button {
 }
 
 .dashboard nav button {
-  all: unset;
+  appearance: none;
   text-align: center;
   cursor: pointer;
 }
@@ -271,12 +305,13 @@ button {
 }
 
 .card__options__button {
-  all: unset;
+  appearance: none;
   display: inline-block;
   width: 50%;
   height: 100%;
   margin-right: -4px;
   border-top: 1px solid rgba(0, 0, 0, .05);
+  background: none;
   color: var(--cool-black);
   cursor: pointer;
 }
@@ -290,16 +325,31 @@ button {
   color: rgba(0, 0, 0, .25);
 }
 
+.card__options__boleto {
+  appearance: none;
+  text-decoration: none;
+  display: inline-block;
+  width: 50%;
+  height: 100%;
+  margin-right: -4px;
+  border-top: 1px solid rgba(0, 0, 0, .05);
+  background: none;
+  color: var(--cool-black);
+  cursor: pointer;
+}
+
 .chatbot {
-  all: unset;
-  position: fixed;
+  appearance: none;
+  position: absolute;
   bottom: 12px;
   right: 12px;
-  width: 64px;
-  height: 64px;
+  width: 100px;
+  height: 100px;
+  background: none;
   background: url(../img/btn-bot.svg);
   background-size: cover;
   background-position: center;
+  border: none;
   cursor: pointer;
 }
 
